// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editor inserts 1`] = `
"10 print "hello"
15
30 print "world""
`;

exports[`editor renum > left justified to left justified 1`] = `
"10  print "foo"
20  print "foo"
30  print "foo"
40  print "foo"
50  print "foo"
60  print "foo"
70  print "foo"
80  print "foo"
90  print "foo"
100 print "foo""
`;

exports[`editor renum > left justified to right justified 1`] = `
" 10 print "foo"
 20 print "foo"
 30 print "foo"
 40 print "foo"
 50 print "foo"
 60 print "foo"
 70 print "foo"
 80 print "foo"
 90 print "foo"
100 print "foo""
`;

exports[`editor renum > mixed double/triple to all double 1`] = `
"10 print "foo"
20 print "foo"
30 print "foo"
40 print "foo"
50 print "foo"
60 print "foo"
70 print "foo"
80 print "foo"
90 print "foo""
`;

exports[`editor renum > right justified to left justified 1`] = `
"10  print "foo"
20  print "foo"
30  print "foo"
40  print "foo"
50  print "foo"
60  print "foo"
70  print "foo"
80  print "foo"
90  print "foo"
100 print "foo""
`;
